# incident-command

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  Makefile  README.md  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
.github/workflows/: terraform.yml
EventCoord/: pyproject.toml
docs/: WEBSOCKET_CNC_API.md
lambda/activitylogs/: activitylogs.py  handler.py  model.py
lambda/auth/: callback.py  googleAuthProvider.py  handler.py  jwks.py
lambda/authorizer/: handler.py
lambda/client/: auth.py
lambda/ics214/: extract_fields.py  ics214.py
lambda/incidents/: handler.py
lambda/locations/: handler.py
lambda/login/: handler.py
lambda/notify_ws_stream/: handler.py
lambda/openapi/: handler.py
lambda/organizations/: handler.py
lambda/periods/: handler.py  periods.py
lambda/radios/: handler.py
lambda/reports/: handler.py  (+6 more)
shared/: requirements.txt
terraform/: api_gateway_activitylogs.tf  api_gateway_auth.tf  api_gateway_base.tf  api_gateway_custom_domain.tf  api_gateway_ics214.tf  api_gateway_incidents.tf  api_gateway_lambdas.tf  api_gateway_locations.tf  api_gateway_main.tf  api_gateway_organizations.tf  api_gateway_periods.tf  api_gateway_radios.tf  api_gateway_reports.tf  api_gateway_units.tf  api_gateway_volunteers.tf  backend.tf  dynamodb.tf  iam_policies.tf  jwt_keys.tf  lambda.tf  launchdarkly.tf  ld_access_flags.tf  ld_feature_flags.tf  main.tf  openapi.tftpl  outputs.tf  terraform.tfvars  variables.tf  versions.tf  ws_api_custom_domain.tf  ws_api_dynamodb.tf  ws_api_integrations.tf  ws_api_lambdas.tf  ws_api_main.tf  ws_api_permissions.tf
tests/: test_handler_utils.py
(+34 files in other folders)
